--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools@latest
+
       - name: Build
         env:
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
